# _shadowrealm

./: README.md
freecodecamp/MERN_beginner_tut/backend/: server.js
freecodecamp/MERN_crashcourse/: package-lock.json  package.json
freecodecamp/MERN_crashcourse/backend/: server.js
freecodecamp/fullstack_tut/html_css/html_tut/google_clone/: index.html  styles.css
freecodecamp/fullstack_tut/html_css/html_tut/test/: index.html
learn_c/brocode_c/: chap1_homework  chap1_homework.c  chap1_ilikepizza  chap1_ilikepizza.c  chap2_variables  chap2_variables.c  chap3_format_specifiers  chap3_format_specifiers.c  chap4_arithmetic_operators  chap4_arithmetic_operators.c
learn_c/hello_world/: hello
learn_c/zero2hero database project/employee database/: readme.md
learn_godot/: README.md
learn_godot/bootleg_zelda_tut/: icon.svg.import  project.godot
learn_godot/bootleg_zelda_tut/scenes/: start.tscn
learn_godot/bootleg_zelda_tut/scripts/: player.gd  player.gd.uid
learn_godot/brackeys_yt/2d_tut_1.0/: icon.svg.import  project.godot
learn_godot/brackeys_yt/2d_tut_1.0/assets/fonts/: PixelOperator8-Bold.ttf.import  PixelOperator8.ttf.import
learn_godot/brackeys_yt/2d_tut_1.0/assets/music/: time_for_adventure.mp3.import
learn_godot/brackeys_yt/2d_tut_1.0/assets/sounds/: coin.wav.import  explosion.wav.import  hurt.wav.import  jump.wav.import  power_up.wav.import  tap.wav.import
learn_godot/brackeys_yt/2d_tut_1.0/assets/sprites/: coin.png.import  fruit.png.import  knight.png.import  platforms.png.import  slime_green.png.import  slime_purple.png.import  world_tileset.png.import
learn_godot/brackeys_yt/2d_tut_1.0/scenes/: game.tscn  player.tscn
learn_godot/brackeys_yt/2d_tut_1.0/scripts/: player.gd.uid
learn_godot/gamedev_tv/complete_godot_4_2d/: icon.svg.import  my_level.tscn  project.godot
learn_godot/zenva/intro_GODOT/: icon.svg.import  project.godot
learn_godot/zenva/intro_GODOT/materials/: mf_material.tres
learn_godot/zenva/intro_GODOT/scenes/: 3d_test.tscn  coin_collector_game.tscn  intro2scripting.tscn  lighting.tscn  main.tscn  parenting.tscn
learn_godot/zenva/intro_GODOT/scripts/: intro_2_scripting.gd.uid  player.gd.uid
learn_godot/zenva/intro_GODOT/sprites/: Coin.png.import  Player.png.import
slop/gravity_ai/: CMakeLists.txt
slop/gravity_ai/.cache/clangd/index/: main.cpp.1F0579A32078D541.idx
slop/gravity_ai/src/: main.cpp
slop/raytrace_ai/: CMakeLists.txt  README.md
slop/raytrace_ai/.cache/clangd/index/: main.cpp.F59CCFF6E2942B26.idx
slop/raytrace_ai/include/core/: Camera.h  Raytracer.h
slop/raytrace_ai/include/geometry/: Sphere.h
slop/raytrace_ai/include/math/: Color.h  HitResult.h  Ray.h  Vector3.h
slop/raytrace_ai/src/: main.cpp
slop/raytrace_ai/src/core/: Camera.cpp  Raytracer.cpp
slop/raytrace_ai/src/geometry/: Sphere.cpp
slop/raytrace_ai/src/math/: Ray.cpp  Vector3.cpp
slop/raytracing_clang/: CMakeLists.txt
slop/raytracing_clang/.cache/clangd/index/: main.c.20D9644582BB29D1.idx  main.c.A349461F96ADEA2A.idx  main.c.DBB982F64194BF85.idx  main.cpp.E57FC97AEA1DA230.idx
slop/raytracing_clang/src/: main.c
slop/spinning_cube_ai/: CMakeLists.txt
slop/spinning_cube_ai/.cache/clangd/index/: cube.cpp.4E964C950370086A.idx
slop/spinning_cube_ai/src/: cube.cpp
tut_hell/cmake/hello_world_example/: CMakeLists.txt
tut_hell/cmake/raylib_test/: CMakeLists.txt
tut_hell/cmake/raylib_test/.cache/clangd/index/: main.cpp.AFE3F897500FC061.idx
tut_hell/cmake/raylib_test/src/: main.cpp
tut_hell/cmake/sdl3_test/: CMakeLists.txt
tut_hell/cmake/sdl3_test/src/: main.cpp
tut_hell/cmake/sfml_test/: CMakeLists.txt
tut_hell/cmake/sfml_test/src/: main.cpp
tut_hell/cpp/freecodecamp_cpp/: 0_helloworld  0_test  0_test.cpp  1_errors  1_errors.cpp
tut_hell/raylib/test/: CMakeLists.txt  raytest.cpp
tut_hell/raylib/tetris/: CMakeLists.txt  Info.plist  README.md
tut_hell/raylib/tetris/.cache/clangd/index/: assets.cpp.0D46505A67E7EEE5.idx  assets.h.805941494A7DBE6D.idx  block.cpp.7F9E5EE2AA01741E.idx  block.h.8336315E201493DE.idx  blocks.cpp.461FE876D1CF2336.idx  colors.cpp.8B524AB89B55749B.idx  colors.h.D59B4819820813BC.idx  game.cpp.DE55B61CAF14673D.idx  game.h.78517D664E7E5152.idx  grid.cpp.1D9FB6F7ED3776EF.idx  grid.h.F6BA85D1D4BC0B24.idx  main.cpp.C1C1DDF28BCB7954.idx  position.cpp.37502E9E428AE159.idx  position.h.16BA2F78DA163C06.idx
tut_hell/raylib/tetris/.github/workflows/: build.yml
tut_hell/raylib/tetris/src/: assets.cpp  assets.h  block.cpp  block.h  colors.cpp  game.cpp  game.h  grid.cpp  grid.h  main.cpp
tut_hell/zenva/zenva_cpp/3_OOP/: 0_hello_world.cpp  1_fields.cpp  2_constructors_p1.cpp  3_constructors_p2.cpp  4_methods.cpp  5_static_members.cpp  6_class_pointers.cpp  7_inheritance_p1.cpp  class_pointers  constructors_p1  constructors_p2  fields  inheritance_p1  methods  static_members
tut_hell/zenva/zenva_cpp/3_OOP/dungeon_crawler/: dungeon.cpp  dungeon.h  gameCharacter.cpp  gameCharacter.h  room.cpp
(+3 files in other folders)
